@@ -1,6 +1,6 @@
 #############################################################################
 # Makefile for building: socnetv
-# Generated by qmake (2.01a) (Qt 4.5.0) on: ??? ??? 27 01:46:06 2009
+# Generated by qmake (2.01a) (Qt 4.5.0) on: ??? ??? 27 19:39:50 2009
 # Project:  socnetv.pro
 # Template: app
 # Command: /usr/lib/qt4/bin/qmake -unix -o Makefile socnetv.pro
@@ -65,6 +65,7 @@ SOURCES       = src/backgrcircle.cpp \
 		moc_mainwindow.cpp \
 		moc_node.cpp \
 		moc_texteditor.cpp \
+		moc_vertex.cpp \
 		moc_parser.cpp \
 		moc_filteredgesdialog.cpp \
 		qrc_src.cpp
@@ -92,6 +93,7 @@ OBJECTS       = backgrcircle.o \
 		moc_mainwindow.o \
 		moc_node.o \
 		moc_texteditor.o \
+		moc_vertex.o \
 		moc_parser.o \
 		moc_filteredgesdialog.o \
 		qrc_src.o
@@ -218,9 +220,9 @@ mocclean: compiler_moc_header_clean compiler_moc_source_clean
 
 mocables: compiler_moc_header_make_all compiler_moc_source_make_all
 
-compiler_moc_header_make_all: moc_backgrcircle.cpp moc_graphicswidget.cpp moc_edge.cpp moc_graph.cpp moc_htmlviewer.cpp moc_mainwindow.cpp moc_node.cpp moc_texteditor.cpp moc_parser.cpp moc_filteredgesdialog.cpp
+compiler_moc_header_make_all: moc_backgrcircle.cpp moc_graphicswidget.cpp moc_edge.cpp moc_graph.cpp moc_htmlviewer.cpp moc_mainwindow.cpp moc_node.cpp moc_texteditor.cpp moc_vertex.cpp moc_parser.cpp moc_filteredgesdialog.cpp
 compiler_moc_header_clean:
-	-$(DEL_FILE) moc_backgrcircle.cpp moc_graphicswidget.cpp moc_edge.cpp moc_graph.cpp moc_htmlviewer.cpp moc_mainwindow.cpp moc_node.cpp moc_texteditor.cpp moc_parser.cpp moc_filteredgesdialog.cpp
+	-$(DEL_FILE) moc_backgrcircle.cpp moc_graphicswidget.cpp moc_edge.cpp moc_graph.cpp moc_htmlviewer.cpp moc_mainwindow.cpp moc_node.cpp moc_texteditor.cpp moc_vertex.cpp moc_parser.cpp moc_filteredgesdialog.cpp
 moc_backgrcircle.cpp: src/backgrcircle.h
 	/usr/lib/qt4/bin/moc $(DEFINES) $(INCPATH) src/backgrcircle.h -o moc_backgrcircle.cpp
 
@@ -258,6 +260,9 @@ moc_node.cpp: src/node.h
 
 moc_texteditor.cpp: src/texteditor.h
 	/usr/lib/qt4/bin/moc $(DEFINES) $(INCPATH) src/texteditor.h -o moc_texteditor.cpp
+
+moc_vertex.cpp: src/vertex.h
+	/usr/lib/qt4/bin/moc $(DEFINES) $(INCPATH) src/vertex.h -o moc_vertex.cpp
 
 moc_parser.cpp: src/parser.h
 	/usr/lib/qt4/bin/moc $(DEFINES) $(INCPATH) src/parser.h -o moc_parser.cpp
@@ -479,6 +484,9 @@ moc_node.o: moc_node.cpp
 
 moc_texteditor.o: moc_texteditor.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_texteditor.o moc_texteditor.cpp
+
+moc_vertex.o: moc_vertex.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_vertex.o moc_vertex.cpp
 
 moc_parser.o: moc_parser.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_parser.o moc_parser.cpp
