@@ -13,7 +13,15 @@
 
 	</ul>
 
-You can load   these kinds of files by clicking on menu File > Load or	by  specifying   them  explicitly at  the command line.	SocNetV uses simple inspection  routines to check the format of the given file. In most cases, it  will  load the file, no matter what the file extension is.
+You can load   these kinds of files by clicking on menu File > Load or	by  specifying   them  explicitly at  the command line.	
+SocNetV uses simple inspection routines to check the format of the given file. 
+In most cases, it  will  load the file, no matter what the file extension is.
+
+<p class="text">
+The default file format of SocNetV is GraphML. <br /> 
+If you create a new network and press Ctrl+S to save it, then by default SocNetV will save it in GraphML format.
+</p>
+
 </div>
 <h4><a name="GraphML" id="GraphML"></a>GraphML files</h4>
 <p class="text">
@@ -53,8 +61,8 @@ Each GraphML document is written in a special form of XML and defines a graph. F
 </p>
 
 <p class="text"> 
-All GraphML files consist of a graphml element and a variety of subelements: graph, node, edge. 
-SocNetV understands almost all of them. But it is not 100% compliant. 
+All GraphML files consist of a graphml element and a variety of subelements: graph, node, edge, keys. 
+SocNetV understands all of them.
 
 </p>
 
